# data-integrity-checker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake.yml
src/: CMakeLists.txt  configuration.cpp  configuration.hpp
test/: CMakeLists.txt
test/basic_test/: CMakeLists.txt  test_connection.cpp
test/lib/: CMakeLists.txt
test/lib/googlemock/: CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
test/lib/googletest/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
test/lib/googletest/docs/: README.md
